[gd_scene load_steps=4 format=3 uid="uid://byoldt3ts1usl"]

[ext_resource type="Script" uid="uid://bmyq4isex7n67" path="res://entities/projectiles/base_shell.gd" id="1_q4q0k"]
[ext_resource type="PackedScene" uid="uid://c8f668njbe3wf" path="res://components/damage_component.tscn" id="3_q4q0k"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wocdh"]
radius = 9.0
height = 33.0

[node name="shell" type="RigidBody2D"]
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_q4q0k")

[node name="view" type="Sprite2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wocdh")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="DamageComponent" parent="." instance=ExtResource("3_q4q0k")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
